# Agent-Web-Evindence-Proxy

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: agent-usage-recipe.md  arastir-evidence-recipe.md  release-checklist.md
src/awep/: claims.py  cli.py  detectors.py  extraction.py  fetcher.py  models.py  redaction.py  report.py  security.py  server.py  storage.py  util.py  verify.py
tests/: test_api.py  test_claims.py  test_detectors.py  test_extraction.py  test_fetcher.py  test_redaction.py  test_report.py  test_security.py  test_storage.py  test_verify.py
tests/fixtures/: captcha.html  cloudflare_interstitial.html  empty.html  github_public_repo.html  hackernews_readable_antibot_mentions.html  js_required.html  login.html  normal.html  real_login_wall.html
