[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agent-web-evidence-proxy"
version = "0.1.0"
description = "Local evidence receipts for AI agent web research."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "typer>=0.12",
  "rich>=13.7",
  "httpx>=0.27",
  "pydantic>=2.7",
  "beautifulsoup4>=4.12",
  "markdownify>=0.12",
  "fastapi>=0.111",
  "uvicorn>=0.30",
]

[project.optional-dependencies]
dev = [
  "pytest>=8",
  "pytest-httpx>=0.30",
  "ruff>=0.5",
]

[project.scripts]
awep = "awep.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/awep"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--basetemp=tmp-pytest -p no:cacheprovider"

[tool.ruff]
line-length = 100
target-version = "py311"
exclude = [".awep", ".pytest-tmp", ".pytest_cache", "tmp-pytest"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
